// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 48,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 132,
  "sha": "5697489317b10975",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 166,
  "sha": "de19f5f5468f6516",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 123,
  "sha": "45ec05a1f445db23",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 51,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 158,
  "sha": "5daa67d408e2573b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 144,
  "sha": "bd56343dd1a6eda0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 143,
  "sha": "a78589ed6a200636",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 172,
  "sha": "bf4f06f90a55ef12",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 146,
  "sha": "700ffda75b79b913",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 145,
  "sha": "09792a74c257603c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 157,
  "sha": "1a3166fd0c9f8a03",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 142,
  "sha": "4e6d2b73658ea1d1",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 151,
  "sha": "cd9dc5175252bba9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 158,
  "sha": "b05b41c1f107dc43",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 171,
  "sha": "991ed13e926d9f97",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 170,
  "sha": "84529ace9dfecffc",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 167,
  "sha": "577b7541291ffe26",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 149,
  "sha": "40cb15d79fdb3f4e",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 225,
  "sha": "f153ab46b8fc0617",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: prenatalDevelopment renders + pins a digest 1`] = `
{
  "buttons": 48,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 142,
  "sha": "8ffadd6e0db67a72",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 135,
  "sha": "74e0bd5c55c95a82",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 50,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 150,
  "sha": "01d260ad1ad41af8",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 145,
  "sha": "52974766124e8c0f",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 50,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 139,
  "sha": "36254bb44166dbd1",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 46,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 136,
  "sha": "a3d1db39a64192f0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 154,
  "sha": "a18eb67998fcedca",
  "svgs": 0,
}
`;
